# numen

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  TODO.md  go.mod  pnpm-lock.yaml  pnpm-workspace.yaml
.woodpecker/: e2e.yaml  rust.yaml  web.yaml
apps/web/: components.json  eslint.config.js  package.json  playwright.config.ts  svelte.config.js
apps/web/e2e/: smoke.e2e.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: api.spec.ts  api.ts  date.spec.ts  date.ts  locale.spec.ts  locale.ts  theme.spec.ts  theme.ts
apps/web/src/lib/components/: AppearanceDock.svelte  AppearanceDock.svelte.spec.ts  FoundationShell.svelte  FoundationShell.svelte.spec.ts  LedgerWorkspace.svelte  LedgerWorkspace.svelte.spec.ts
apps/web/src/lib/components/ui/accordion/: accordion-content.svelte  accordion-trigger.svelte
apps/web/src/lib/components/ui/alert/: alert-description.svelte  alert-title.svelte  alert.svelte
apps/web/src/lib/components/ui/badge/: badge.svelte
apps/web/src/lib/components/ui/button/: button.svelte
apps/web/src/lib/components/ui/card/: CardRegressionHarness.svelte  card-action.svelte  card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte  card.svelte.spec.ts
apps/web/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  (+5 more)
apps/web/src/lib/ledger/: accounts.spec.ts  accounts.ts  recent-transactions.spec.ts  recent-transactions.ts  transactions.spec.ts  transactions.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
cmd/numen/: main.go
crates/numen-api/: Cargo.toml
crates/numen-api/migrations/: 0001_feature2_ledger.sql
crates/numen-api/src/: dto.rs  error.rs  lib.rs  main.rs  repository.rs
crates/numen-core/: Cargo.toml
crates/numen-core/src/: account.rs  error.rs  lib.rs  money.rs  posting.rs  transaction.rs
docs/: IDEA.md  IMPLEMENTATION_PLAN.md  feature-roadmap.md  project-plan.md
docs/adr/: 0001-stack.md
internal/accountingstore/: repositories.go
internal/domain/accounting/: account.go  account_test.go  category.go  category_test.go  date.go  ids.go  money.go  money_test.go  posting.go  posting_test.go  text_validation.go  transaction.go  transaction_test.go
internal/httpserver/: server.go  server_test.go
internal/sqlite/: account_repository.go  account_repository_test.go  category_repository.go  category_repository_test.go  open.go  open_internal_test.go  open_test.go  repository_helpers.go  repository_helpers_internal_test.go  repository_test_helpers_test.go  schema.go  schema_test.go  transaction_repository.go  transaction_repository_test.go
numen-core/: Cargo.toml
numen-core/src/: account.rs  budget.rs  category.rs  error.rs  import.rs  lib.rs  money.rs  numen.rs  transaction.rs
numen-core/tests/: numen_core.rs
(+13 files in other folders)
