[workspace]
members = ["crates/numen-core", "crates/numen-api"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["json", "macros"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
uuid = { version = "1.22.0", features = ["v4"] }
