[package]
name = "numen-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
