[package]
name = "numen-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
numen-core = { path = "../numen-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
tower.workspace = true
serde_json.workspace = true
